--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ rocket = "0.5.0-rc.1"
 petgraph = "0.5.1"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
+anyhow = "1.0.41"
