--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ petgraph = "0.5.1"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 anyhow = "1.0.41"
+validated = "0.1.1"
