--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,6 +13,6 @@ serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 anyhow = "1.0.41"
 thiserror = "1.0.26"
-validated = "0.1.1"
 rand = "0.8.4"
-itertools = "0.10.0"
+linked_hash_set = "0.1.4"
+bimap = "0.6.2"
