Switch to RON format and add door data

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,8 +10,7 @@ edition = "2018"
 rocket = "0.5.0-rc.1"
 petgraph = "0.5.1"
 serde = { version = "1.0.126", features = ["derive"] }
-serde_json = "1.0.64"
-anyhow = "1.0.41"
+ron = "0.7.0"
 thiserror = "1.0.26"
 rand = "0.8.4"
 linked_hash_set = "0.1.4"
