--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.5.0-rc.1"
+rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
 petgraph = "0.5.1"
 serde = { version = "1.0.126", features = ["derive"] }
 ron = "0.7.0"
